# uv_text1

./: main.py  pyproject.toml
text1/: demo01.py  medon01.py
text2/: 动态切换模型.py  对话.py  打印机.py  运行时动态切换模型.py
text3/: 多态输入图片.py  速率限制.py
text4/: 01-提示词模版.py  03-历史记录.py  04-少样本提示模版.py  05-json约束.py  06-其它解析器.py  聊天提示模版.py
机试/: text01.py  text2.py  text3.py
