[project]
name = "uv-text"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-siliconflow>=1.0.0",
    "langchain-tavily>=0.2.18",
    "langchain-unstructured>=1.0.1",
    "modelscope>=1.37.1",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
    "transformers==4.44.2",
    "unstructured[docx,md]>=0.22.32",
]
